# chess2

./: .gitignore  CMakeLists.txt  README.md
data/: database.db  form1.txt  form2.formation  form2.txt  form3.txt  save.chess2  save.txt
dependencies/blah/src/internal/: graphics_backend_gl.cpp  platform_backend_sdl2.cpp
src/: aiUtils.cpp  aiUtils.h  app.cpp  blahtest.cpp  board.c  board.h  content.cpp  content.h  dbmanager.cpp  dbmanager.h  filem.c  filem.h  game.c  game.h  main.c  piece.c  piece.h  tempiece.c  tempiece.h  user.cpp  user.h
src/game/: chess2.h  filem.c  filem.h  game.c  game.h  main.c  piece.c  piece.h
src/gui/: GuiButton.cpp  GuiButton.h  draggablePieceSprite.cpp  draggablePieceSprite.h  guiButton.cpp  guiButton.h  nexusSprite.cpp  nexusSprite.h  pieceSprite.cpp  pieceSprite.h  sprite.cpp  sprite.h  staticSprite.cpp  staticSprite.h
src/imgui/: imgui.cpp
